<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/myUduxFragment"
        android:icon="@drawable/ic_myudx"
        android:title="@string/navbar_text_myudux" />

        <item android:id="@+id/videoFragment"
            android:icon="@drawable/ic_video"
            android:title="@string/navbar_text_video" />

        <item android:id="@+id/discoverFragment"
            android:icon="@drawable/ic_discover"
            android:title="@string/navbar_text_discover" />

    <item android:id="@+id/connectFragment"
        android:icon="@drawable/ic_connect"
        android:title="@string/navbar_text_connect" />

    <item android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/navbar_text_search" />
</menu>