<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/discoverFragment">

    <fragment
        android:id="@+id/connectFragment"
        android:name="com.ogunladetaiye.udux.ui.udx_connect.ConnectFragment"
        android:label="@string/navbar_text_connect"
        tools:layout="@layout/fragment_connect" />
    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.ogunladetaiye.udux.ui.udux_discover.DiscoverFragment"
        android:label="@string/navbar_text_discover"
        tools:layout="@layout/fragment_discover" />
    <fragment
        android:id="@+id/myUduxFragment"
        android:name="com.ogunladetaiye.udux.ui.myudx.FragmentMyUdux"
        android:label="@string/navbar_text_myudux"
        tools:layout="@layout/fragment_my_udux" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.ogunladetaiye.udux.ui.udux_search.FragmentSearch"
        android:label="@string/navbar_text_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/videoFragment"
        android:name="com.ogunladetaiye.udux.ui.udux_video.VideoFragment"
        android:label="@string/navbar_text_video"
        tools:layout="@layout/fragment_video" />
</navigation>